# TushareDownloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
Tests/: test_config.json  test_database.py  test_save_and_log.py  test_tushare_api.py
src/TushareDownloader/: example.py
src/bageltushare/: database.py  tushare_downloader.py
